@startuml RetinAI_DiagramaClases_UML

skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #EEEDFE
skinparam classHeaderBackgroundColor #534AB7
skinparam classFontColor #FFFFFF
skinparam classFontSize 13
skinparam classAttributeFontSize 12
skinparam classAttributeIconSize 0
skinparam classBorderColor #534AB7
skinparam ArrowColor #3C3489
skinparam ArrowThickness 1.2
skinparam roundcorner 6
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 60

' ============================================================
' MODELOS (Clases PHP reales en /models)
' ============================================================

class AuthModel {
  -db
  --
  +__construct()
  +getUserByEmail(email : string) : array|false
  +updateLastAccess(id : int) : void
  +updatePassword(id : int, hashedPassword : string) : void
}

class DoctorModel {
  -db
  --
  +__construct()
  +existsByEmail(correo : string, exclude_id : int = null) : bool
  +existsByCMP(cmp : string, exclude_id : int = null) : bool
  +addSpecialty(descripcion : string) : void
  +create(data : array) : int
  +deactivate(id : int, est_ids : array) : bool
  +findById(id : int, est_ids : array) : array|false
  +updateDoctor(id : int, est_ids : array, data : array) : bool
  +resetPassword(id : int, est_ids : array, hash : string) : bool
  +countPendingByEstablishments(ids_array : array) : int
  +countActiveByEstablishments(ids_array : array) : int
  +getActiveDoctorsByEstablishments(ids_array : array) : array
  +getPendingDoctorsByEstablishments(ids_array : array) : array
}

class EstablecimientoModel {
  -db
  --
  +__construct()
  +getById(id : int) : array|null
  +getByOwnerId(userId : int) : array
}

class MaestroModel {
  -db
  --
  +__construct()
  +getEspecialidades() : array
}

class SolicitudModel {
  -db
  --
  +__construct()
  +getSolicitudesByContactEmailOrOwner(email : string, userId : int) : array
  +getAllSolicitudesConOrigen() : array
  +countPendientes() : int
}

' ============================================================
' CONTROLADORES (Clases PHP reales en /controllers)
' ============================================================

class DoctorController {
  -model
  --
  +__construct()
  -baseUrl() : string
  -redirect(path : string) : void
  +createDoctor() : void
  +deactivate() : void
  +editDoctor() : void
  +resetPassword() : void
}

class AuthController {
  -model
  --
  +__construct()
  -baseUrl() : string
  +login() : void
  +changePassword() : void
  +logout() : void
  -redirect(path : string) : void
  -redirectWithError(error : string) : void
  -redirectByRole(rol : string) : void
}

class SolicitudController <<procedural>> {
  ' Módulo procedimental (no instanciable)
  --
  +{static} handleSendCode() : void
  +{static} handleSolicitar() : void
  +{static} handleSolicitarAdmin() : void
  +{static} handleAprobar() : void
  +{static} handleRechazar() : void
}

' ============================================================
' SERVICIOS (Clases PHP reales en /services y /utils)
' ============================================================

class MailService {
  +{static} sendTempPassword(email : string, nombre : string, tempPass : string) : bool
  +{static} sendResetPassword(email : string, nombre : string, tempPass : string) : bool
  +{static} sendVerificationCode(email : string, nombres : string, codigo : string) : bool
  +{static} sendSolicitudAprobada(email : string, nombre : string, centro : string) : bool
}

class PasswordHelper <<utility>> {
  +{static} generateTemp(length : int) : string
}

' ============================================================
' RELACIONES — Controladores → Modelos (dependencias)
' ============================================================

DoctorController  ..> DoctorModel       : <<usa>>
DoctorController  ..> MailService        : <<usa>>
DoctorController  ..> PasswordHelper     : <<usa>>
AuthController    ..> AuthModel          : <<usa>>
SolicitudController ..> SolicitudModel   : <<usa>>
SolicitudController ..> EstablecimientoModel : <<usa>>
SolicitudController ..> MailService      : <<usa>>

' ============================================================
' RELACIONES — Modelos → Datos (asociaciones lógicas)
' ============================================================

DoctorModel       ..> EstablecimientoModel : <<consulta>>
MaestroModel      ..> DoctorModel          : <<provee especialidades>>

@enduml
